feat: Enhance UI with new components and styling
Introduces several new UI components and refines existing styling to improve the user experience and visual appeal of the Hillel portfolio. Key updates include:

- Added `Navigation`, `Testimonials`, and `Socials` components.
- Updated the `Hero` section title and description.
- Enhanced the `CustomCursor` for a more refined interaction feel.
- Introduced `::selection` styling for better text highlighting.
- Adjusted background colors and font families for a richer aesthetic.
- Updated `framer-motion` dependency.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
-    <title>Hillel - Cinematic Editor</title>
-    <meta name="description" content="Premium Video Editing Portfolio" />
+    <title>Hillel - Cinematic Journey</title>
+    <meta name="description" content="Premium Video Editing & Branding Portfolio" />
     
     <!-- Tailwind CSS (Using CDN for immediate setup) -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -12,24 +12,24 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&family=Space+Grotesk:wght@300;500;700&family=Playfair+Display:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700;900&family=Space+Grotesk:wght@300;400;500;700&family=Playfair+Display:ital,wght@0,400;0,600;1,400&family=Heebo:wght@300;400;700;900&display=swap" rel="stylesheet">
     
     <script>
       tailwind.config = {
         theme: {
           extend: {
             fontFamily: {
-              sans: ['Montserrat', 'sans-serif'],
+              sans: ['Montserrat', 'Heebo', 'sans-serif'],
               mono: ['Space Grotesk', 'monospace'],
               serif: ['Playfair Display', 'serif'],
             },
             colors: {
               cinematic: {
-                black: '#050505',
-                dark: '#0a0a0a',
-                gray: '#1f1f1f',
-                gold: '#d4af37',
-                red: '#8a0000',
+                black: '#0a0a0a',
+                dark: '#111111',
+                gray: '#222222',
+                gold: '#D4AF37',
+                red: '#880000',
               }
             },
             backgroundImage: {
@@ -39,13 +39,13 @@
         }
       }
     </script>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "framer-motion": "https://aistudiocdn.com/framer-motion@^12.23.24",
+    "framer-motion": "https://aistudiocdn.com/framer-motion@^12.23.25",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0"
   }
 }
